--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -10,7 +10,7 @@ import getUniqueTags from "@utils/getUniqueTags";
 
 const posts = await getCollection("blog");
 
-let tags = getUniqueTags(posts);
+const tags = getUniqueTags(posts);
 ---
 
 <Layout title={`Tags | ${SITE.title}`}>
